# FinLongRAG

./: .env.example  .gitattributes  .gitignore  README.md  alembic.ini  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  start.bat
alembic/: env.py
config/: finlongrag.yaml  intents.yaml
docs/: architecture.md  dependency_policy.md  kb_isolation_checklist.md  kb_isolation_fix.md  kb_isolation_fix_summary.md  kb_isolation_summary.md  multi_kb_fusion_feature.md  runbook.md  setup_and_handover.md
frontend/: .npmrc  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
scripts/: activate_env.ps1  ask.py  build_index.py  check_llm_evidence.py  check_runtime.py  debug_full_pipeline.py  debug_multi_kb_retrieval.py  ingest.py  init_postgres.ps1  list_kb_names.py  merge_all_indexes.py  run_questions.py  serve.py  setup_env.ps1  start.ps1  test_api.py  test_multi_kb_fusion.py  test_query_with_kb_id.py  verify_code_fix.py  verify_db_only.py  verify_global_index_kb_id.py  verify_kb_isolation.py
tests/: conftest.py  test_agent_components.py  test_agent_runtime.py  test_api_app.py  test_chunking_and_index.py  test_config.py  test_document_index_kb.py  test_embedding_providers.py  test_incremental_ingestion.py  test_index_merge.py  test_ingestion_pipeline.py  test_kb_isolation.py  test_llm_model_scope.py  test_pdf_opendataloader.py  test_pipeline_empty_index.py  test_quality_and_tools.py  test_query_kb_scope.py  test_reasoning_pipeline.py  test_security_improvements.py  test_submission.py
(+132 files in other folders)
