[project]
name = "finlongrag"
version = "0.1.0"
description = "Agentic RAG system for financial long-document QA and services."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "jieba>=0.42.1,<0.43",
    "numpy>=1.26.4,<2.0",
    "opendataloader-pdf>=1.12.0,<2.0",
    "pyyaml>=6.0.2,<6.1",
    "requests>=2.32.3,<2.33",
    "httpx>=0.27,<0.28",
    "python-dotenv>=1.0.1,<1.1",
    "setuptools>=70,<81",
    "fastapi>=0.115,<0.116",
    "python-multipart>=0.0.20,<0.1",
    "pydantic>=2.10,<2.11",
    "uvicorn>=0.34,<0.35",
    "sqlalchemy>=2.0.36,<2.1",
    "alembic>=1.13,<1.14",
    "psycopg[binary]>=3.2,<3.3",
    "asyncpg>=0.30,<0.31",
    "faiss-cpu>=1.14,<1.15",
    "pyjwt>=2.10,<3.0",
    "openpyxl>=3.1,<3.2",
    "pypdf>=5,<7",
    "cryptography>=42,<45",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<8.4",
    "ruff>=0.8,<0.9",
]
hybrid-pdf = [
    "opendataloader-pdf[hybrid]>=1.12.0,<2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
"src/finlongrag/api/v1.py" = ["B008"]
